force-app/main/default/objects/CRICOS_Code__c.object
<CustomObject>
    <fields>
        <fullName>Course_Version_Key__c</fullName>
        <label>Course Version Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>CRICOS Codes</relationshipLabel>
        <relationshipName>CRICOS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRICOS</fullName>
                </value>
                <value>
                    <fullName>CRICOS Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Set_Version_Key__c</fullName>
        <label>Unit Set Version Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Set</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>CRICOS Codes (Unit Set)</relationshipLabel>
        <relationshipName>Unit_Set_CRICOS_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CRICOS Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Unique_Key__c</columns>
        <columns>NAME</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Type__c</columns>
        <columns>Course__c</columns>
        <columns>Unit_Set__c</columns>
        <columns>Course_Version_Key__c</columns>
        <columns>Unit_Set_Version_Key__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CRICOS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRICOS Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>